@@ -6,15 +6,7 @@ buildscript {
     mavenLocal()
   }
   dependencies {
-    classpath "com.marklogic:flux-api:1.1.3"
-
-    // Demonstrates removing the Jackson libraries that otherwise cause a conflict with
-    // Spark, which requires Jackson >= 2.14.0 and < 2.15.0.
-    classpath("com.marklogic:ml-gradle:4.8.0") {
-      exclude group: "com.fasterxml.jackson.databind"
-      exclude group: "com.fasterxml.jackson.core"
-      exclude group: "com.fasterxml.jackson.dataformat"
-    }
+    classpath "com.marklogic:flux-api:1.2.0"
   }
 }
 
@@ -28,14 +20,17 @@ repositories {
 }
 
 dependencies {
-  implementation "com.marklogic:flux-api:1.1.3"
+  implementation "com.marklogic:flux-api:1.2.0"
 }
 
 tasks.register("runApp", JavaExec) {
-  description = "Verify that the example program can be compiled and run with flux-api as a dependency. " +
-    "Requires using Java 11."
+  description = "Verify that the example program can be compiled and run with flux-api as a dependency. "
   mainClass = "org.example.App"
   classpath = sourceSets.main.runtimeClasspath
+  jvmArgs = [
+    // Required when running on Java 17.
+    '--add-exports=java.base/sun.nio.ch=ALL-UNNAMED'
+  ]
 }
 
 tasks.register("runViaCustomTask") {
